[metadata]
name = weatherlink_v2_api_sdk
version = 1.0.0
author = Jeremy Wall
author_email = jeremyw@davisinstruments.com
description = WeatherLink v2 API SDK for Python
url = https://github.com/weatherlink/weatherlink-v2-api-sdk-python
project_urls =
    Bug Tracker = https://github.com/weatherlink/weatherlink-v2-api-sdk-python/issues
license = Apache License 2.0
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.0

[options.packages.find]
where = src